--- a/lib/bindings/langs/react-native/Cargo.toml
+++ b/lib/bindings/langs/react-native/Cargo.toml
@@ -13,14 +13,14 @@ uniffi = { version = "0.23.0", features = ["bindgen-tests", "cli"] }
 uniffi_bindgen = "0.23.0"
 uniffi_macros = "0.23.0"
 camino = "1.1.1"
-log = "*"
+log = { workspace = true }
 serde = "*"
 askama = { version = "0.11.1", default-features = false, features = ["config"] }
 toml = "0.5"
 clap = { version = "3.2.22", features = ["derive"] }
 heck = "0.4"
 paste = "1.0"
-once_cell = "1.12"
+once_cell = { workspace = true }
 
 [build-dependencies]
 uniffi_build = { version = "0.23.0" }
