Fix flutter build

--- a/lib/bindings/langs/flutter/melos.yaml
+++ b/lib/bindings/langs/flutter/melos.yaml
@@ -39,7 +39,7 @@ scripts:
   build-other-local: dart scripts/build_other.dart --local
 
   test:
-    cargo build --package breez-liquid-sdk --profile=frb &&
+    cargo build --package breez-sdk-liquid --profile=frb &&
     melos run test-dart &&
     melos run test-flutter
   
