Fix relative path on melos.yaml

--- a/lib/bindings/langs/flutter/melos.yaml
+++ b/lib/bindings/langs/flutter/melos.yaml
@@ -1,11 +1,11 @@
 name: breez_liquid_sdk
 repository: https://github.com/breez/breez-liquid-sdk
 packages:
-  - ../../../packages/**
+  - ../../../../packages/**
   - scripts
 ignore:
   # e.g. ignore example apps
-  - ../../../packages/**/example/**
+  - ../../../../packages/**/example/**
 
 commands:
   bootstrap:
