Ignore Flutter example app on Melos.yaml

--- a/lib/bindings/langs/flutter/melos.yaml
+++ b/lib/bindings/langs/flutter/melos.yaml
@@ -4,8 +4,10 @@ packages:
   - ../../../../packages/**
   - scripts
 ignore:
-  # e.g. ignore example apps
+  # e.g. ignore example apps of dependencies
   - ../../../../packages/**/example/**
+  # e.g. ignore Flutter example app
+  - '../../../../packages/**/example'
 
 commands:
   bootstrap:
