Do not treat info messages as critical

--- a/lib/bindings/langs/flutter/melos.yaml
+++ b/lib/bindings/langs/flutter/melos.yaml
@@ -57,7 +57,7 @@ scripts:
       dirExists: integration_test
 
   analyze:
-    exec: flutter analyze --fatal-infos .
+    exec: flutter analyze --no-fatal-infos .
     description: Analyze a specific package in this project.
 
   check-format:
