--- a/lib/bindings/langs/flutter/melos.yaml
+++ b/lib/bindings/langs/flutter/melos.yaml
@@ -1,11 +1,13 @@
 name: breez_liquid_sdk
 repository: https://github.com/breez/breez-liquid-sdk
 packages:
-  - ../../../packages/**
+  - ../../../../packages/**
   - scripts
 ignore:
-  # e.g. ignore example apps
-  - ../../../packages/**/example/**
+  # e.g. ignore example apps of dependencies
+  - ../../../../packages/**/example/**
+  # e.g. ignore Flutter example app
+  - '../../../../packages/**/example'
 
 commands:
   bootstrap:
@@ -55,7 +57,7 @@ scripts:
       dirExists: integration_test
 
   analyze:
-    exec: flutter analyze --fatal-infos .
+    exec: flutter analyze --no-fatal-infos .
     description: Analyze a specific package in this project.
 
   check-format:
