--- a/lib/bindings/langs/flutter/scripts/pubspec.yaml
+++ b/lib/bindings/langs/flutter/scripts/pubspec.yaml
@@ -1,6 +1,6 @@
 name: scripts
 description: Supporting scripts
-version: 0.2.1
+version: 0.3.1-dev1
 homepage: https://breez.technology
 repository: https://github.com/breez/breez-sdk-liquid
 publish_to: none
