--- a/lib/bindings/langs/android/lib/src/main/AndroidManifest.xml
+++ b/lib/bindings/langs/android/lib/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-  package="technology.breez">
+  package="technology.breez.liquid">
 
   <uses-permission android:name="android.permission.INTERNET" />
 
