Include bindings project on melos script hooks

--- a/lib/bindings/langs/flutter/melos.yaml
+++ b/lib/bindings/langs/flutter/melos.yaml
@@ -11,17 +11,20 @@ ignore:
 commands:
   bootstrap:
     hooks:
-      post: cargo check --manifest-path ../../../core/Cargo.toml --features frb 
+      post: 
+        cargo check --manifest-path ../../../bindings/Cargo.toml
+        cargo check --manifest-path ../../../core/Cargo.toml --features frb 
   clean:
     hooks:
-      pre: cargo clean --manifest-path ../../../core/Cargo.toml --features frb 
+      pre: 
+        cargo clean --manifest-path ../../../bindings/Cargo.toml
+        cargo clean --manifest-path ../../../core/Cargo.toml --features frb 
   version:
     hooks:
       preCommit: bash scripts/version.sh
 
 scripts:
   test:
-    cargo build --package breez-sdk-liquid --profile=frb &&
     melos run test-dart &&
     melos run test-flutter
   
