--- a/lib/bindings/langs/react-native/Cargo.toml
+++ b/lib/bindings/langs/react-native/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "bindings-react-native"
-version = "0.3.4"
+version = "0.3.5-dev2"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
